--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Created by https://www.gitignore.io/api/python,pycharm
 
 ### PyCharm ###
@@ -170,3 +169,4 @@ venv.bak/
 # End of https://www.gitignore.io/api/python,pycharm
 *.txt
 media/*
+db.sqlite3
